# burnko

./: .gitignore  CITATION.cff  Cargo-cpu-burn.toml  Cargo.toml  README.md  READMEadditions.md  TESTING.md  benchmarks.toml  burnko.code-workspace  debug_axis.rs  debug_cumsum.rs  debug_cumsum_precision.rs  debug_indexing  debug_indexing.rs  debug_tensor_layout.rs  heavy_lifting_test.rs  scan_verification_test.rs  simple_test.rs
.github/instructions/: copilot instructions.instructions.md
.github/workflows/: performance-tests.yml
burn-book/src/advanced/: README.md
crates/burn-autodiff/src/checkpoint/: builder.rs
crates/burn-collective/src/: local_server.rs
crates/burn-collective/src/global/node/: tree.rs  worker.rs
crates/burn-core/src/data/dataloader/: builder.rs
crates/burn-core/src/nn/attention/: mask.rs
crates/burn-core/src/nn/conv/: checks.rs
crates/burn-core/src/nn/loss/: binary_cross_entropy.rs
crates/burn-core/src/optim/: visitor.rs
crates/burn-cubecl/: Cargo.toml
crates/burn-cubecl-fusion/src/shared/trace/: block.rs  output.rs
crates/burn-cubecl/benches/: comprehensive_cpu_vs_gpu.rs  cpu_vs_gpu_comparison.rs  cpu_vs_gpu_scan_benchmark.rs  cpu_vs_gpu_stress_benchmark.rs  scan.rs  ultimate_cpu_vs_gpu.rs
crates/burn-cubecl/src/: buffer_access.rs  lib.rs
crates/burn-cubecl/src/kernel/: fft.rs  fft_tests.rs  mod.rs  scan.rs  scan_tests.rs
crates/burn-cubecl/src/kernel/conv/: im2col.rs
crates/burn-cubecl/src/kernel/index/: slice_assign.rs
crates/burn-cubecl/src/ops/: float_ops.rs
crates/burn-dataset/src/dataset/: sqlite.rs
crates/burn-dataset/src/vision/: mnist.rs
crates/burn-derive/src/shared/: generics.rs
crates/burn-fusion/src/ops/: float.rs
crates/burn-fusion/src/stream/: multi.rs
crates/burn-fusion/src/stream/execution/: explorer.rs  policy.rs
crates/burn-ndarray/: Cargo.toml
crates/burn-ndarray/benches/: cpu_multicore_stress.rs  cpu_ndarray_multicore.rs  cpu_vs_gpu_comparison.rs  heavy_cpu_vs_gpu.rs  quick_cpu_vs_gpu.rs  scan_stress_benchmark.rs  timing_expectations.rs  ultimate_cpu_vs_gpu.rs
crates/burn-ndarray/src/: lib.rs
crates/burn-ndarray/src/ops/: debug_axis_iteration.rs  debug_monotonic.rs  deform_conv.rs  fft.rs  macros.rs  mod.rs  scan_analytical_tests.rs  scan_parallel.rs  scan_tests.rs  tensor.rs
crates/burn-ndarray/src/ops/simd/: conv.rs
crates/burn-ndarray/tests/: debug_axis_test.rs  debug_tensor_dims.rs  fft_parallel_test.rs  fft_test.rs  ndarray_native_test.rs  scan_verification.rs
crates/burn-tch/src/: tensor.rs
crates/burn-tensor-testgen/src/: lib.rs
crates/burn-tensor/src/: lib.rs
crates/burn-tensor/src/tensor/api/: base.rs  fft.rs  mod.rs  numeric.rs
crates/burn-tensor/src/tensor/ops/: mod.rs  tensor.rs
crates/burn-tensor/src/tests/: mod.rs
crates/burn-train/src/learner/: builder.rs  train_val.rs
crates/burn-train/src/logger/: metric.rs
crates/burn-vision/src/tests/: mod.rs
crates/burn-wgpu/: Cargo.toml
crates/burn-wgpu/benches/: scan_gpu_stress_benchmark.rs
crates/burn-wgpu/src/: lib.rs
crates/burn-wgpu/src/video/: config.rs  mod.rs  pipeline.rs  pipeline_fixed.rs  stream.rs  tensor_texture.rs
crates/burn-wgpu/tests/: debug_scan.rs  extreme_gpu_burn.rs  gpu_2d_performance.rs  gpu_burn_monitor.rs  gpu_burn_test.rs  scan_analytical_tests.rs  ultimate_parallel_scan.rs
crates/burn/src/: lib.rs
crates/onnx-ir/src/: from_onnx.rs
crates/onnx-ir/src/node/: clip.rs  split.rs  topk.rs  trilu.rs
devutils/nvidia-smi-rusti/: Cargo.toml  README.md
devutils/nvidia-smi-rusti/src/: main.rs
docs/: performance-baselines.md  test-results-summary.md  wgpu-direct-video-pipeline.md
examples/: heavy_lifting_test.rs  psychedelic-tensors.rs
examples/cpu-burn/: Cargo.toml
examples/cpu-burn/src/: main.rs
examples/cross-backend-comparison/: Cargo.toml  README.md
examples/cross-backend-comparison/src/: main.rs
examples/debug-cumsum-precision/: Cargo.toml
examples/debug-cumsum-precision/src/: main.rs
examples/debug_cumsum_precision/: Cargo.toml
examples/guide-kosmod/: Cargo.toml  guide-kosmod.code-workspace
examples/manual/: debug_cumsum_precision.rs  fft_test_simple.rs  scan_verification_test.rs
examples/notebook/: fft-image-processing.ipynb  image-manipulation.ipynb  image-processing-tensor-display.ipynb  tensor-image-display-test.ipynb
examples/print-image-of/src/: main.rs
examples/psychedelic-tensors/: .$modelarch.drawio.bkp  Cargo.toml  modelarch.drawio
examples/psychedelic-tensors/src/: main.rs  main_2d.rs  main_backup.rs
examples/rayon-parallel-test/: Cargo.toml
examples/rayon-parallel-test/src/: main.rs
examples/realtime-tensor-viz/: .$tensorviz-architecture.drawio.bkp  Cargo.toml  README.md  tensorviz-architecture.drawio
examples/realtime-tensor-viz/examples/: metrics-debug.rs  realtime-tensor-viz-egui.rs  realtime-tensor-viz.rs
examples/realtime-tensor-viz/src/: lib.rs  main.rs  main_backup.rs  main_clean.rs
examples/scan-verification-test/: Cargo.toml
examples/scan-verification-test/src/: main.rs
examples/show-image-of/: Cargo.toml  README.md
examples/show-image-of/src/: main.rs
examples/wgpu-direct-video/: .gitattributes  Cargo.toml  README.md
examples/wgpu-direct-video/examples/: basic_tensor_stream.rs  dual_purpose_demo.rs  five_tensor_dual_visualization.rs  minimal_working.rs  real_rendering.rs  simple_burn_visualization.rs  simple_window.rs  single_shader_dual.rs  super_simple_demo.rs  synthetic_video_burn_direct.rs  video_stream_processing.rs  window_visualization.rs
examples/wgpu-direct-video/heavy_lifting_test/: heavy_benchmark_results.txt
examples/wgpu-direct-video/heavy_lifting_test/src/: main.rs
examples/wgpu-direct-video/shaders/: tensor_render.wgsl
examples/wgpu-direct-video/src/: dual_backend.rs  lib.rs  simple_visualizer.rs
examples/wgpu-direct-video/test/: dual_shader_backend_test.rs
heavy_lifting_test/: Cargo.toml  heavy_benchmark_results.txt
heavy_lifting_test/src/: main.rs
rayon-test/: Cargo.toml
tests/: cross_backend_comparison.rs  scan_verification.rs
tests/rayon-test/src/: main.rs
(+21 files in other folders)
