[package]
name = "cross-backend-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { path = "../../crates/burn", features = ["ndarray", "wgpu"] }
burn-ndarray = { path = "../../crates/burn-ndarray" }
burn-wgpu = { path = "../../crates/burn-wgpu" }

[[bin]]
name = "main"
path = "src/main.rs"
