[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "guide_kosmod"
publish = false
version.workspace = true

[features]
default = ["burn/default"]

[dependencies]
burn = {path = "../../crates/burn", features = ["wgpu", "train", "vision"]}

# Serialization
log = {workspace = true}
serde = {workspace = true, features = ["std", "derive"]}
