[package]
name = "psychedelic-tensors"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["burn/dataset", "burn/wgpu"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { path = "../../crates/burn", features = ["train", "wgpu", "ndarray"] }
minifb = "0.25"
