[package]
name = "realtime-tensor-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[lib]
name = "realtime_tensor_viz"
path = "src/lib.rs"

[[example]]
name = "realtime-tensor-viz"
path = "examples/realtime-tensor-viz.rs"

[dependencies]
burn = { path = "../../crates/burn", features = ["ndarray", "wgpu", "std"] }

# For visualization
minifb = "0.25"
