[package]
name = "realtime-tensor-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[lib]
name = "realtime_tensor_viz"
path = "src/lib.rs"

[[example]]
name = "realtime-tensor-viz"
path = "examples/realtime-tensor-viz.rs"

[[example]]
name = "realtime-tensor-viz-egui"
path = "examples/realtime-tensor-viz-egui.rs"

[dependencies]
burn = { path = "../../crates/burn", features = ["ndarray", "wgpu", "std"] }
rayon = "1"
# Egui/eframe for experimental UI
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
# For visualization
minifb = "0.25"
