[package]
name = "realtime-tensor-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
metrics-sysinfo = ["dep:sysinfo"]
metrics-nvml = ["dep:nvml-wrapper"]

[lib]
name = "realtime_tensor_viz"
path = "src/lib.rs"

[[example]]
name = "realtime-tensor-viz"
path = "examples/realtime-tensor-viz.rs"

[[example]]
name = "realtime-tensor-viz-egui"
path = "examples/realtime-tensor-viz-egui.rs"

[[example]]
name = "metrics-debug"
path = "examples/metrics-debug.rs"

[dependencies]
burn = { path = "../../crates/burn", features = ["ndarray", "wgpu", "std"] }
rayon = "1"
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui_plot = "0.27"
sysinfo = { version = "0.30", optional = true }
nvml-wrapper = { version = "0.9", optional = true }
minifb = "0.25"
