[package]
authors = ["kostoel <kostoel@gmail.com>"]
categories = ["science"]
description = "Example to print (show) an image of a burn tensor"
edition.workspace = true
license.workspace = true
name = "burn-show-image-of"


[features]
default = ["burn/default"]


[dependencies]
burn = {path = "../../crates/burn", features = ["wgpu", "vision"]}

burn-ndarray = {path = "../../crates/burn-ndarray"}
ndarray = "0.15.3"
ratatui = " 0.27.0"


# The following dependencies are used for plotting
image = " 0.25.1"
# evcxr_image = "1.1.0"
