[package]
name = "wgpu-direct-video"
version = "0.1.0"
edition = "2024"
description = "Revolutionary zero-copy tensor visualization with dual-purpose shaders for Burn"
license = "MIT OR Apache-2.0"

[dependencies]
burn = { path = "../../crates/burn", features = ["wgpu", "fusion"] }
burn-wgpu = { path = "../../crates/burn-wgpu", features = ["fusion"] }
burn-cubecl = { path = "../../crates/burn-cubecl" }
burn-tensor = { path = "../../crates/burn-tensor" }
burn-fusion = { path = "../../crates/burn-fusion" }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "f1b0080edc55c9a0dd02fad333f81a02a200beea", features = ["wgpu"] }
tokio = { version = "1.0", features = ["full"] }
winit = "0.29"
wgpu = "0.19"
futures = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
env_logger = "0.10"

# Essential examples demonstrating breakthrough concepts
[[example]]
name = "single_shader_dual"
path = "examples/single_shader_dual.rs"

[[example]]
name = "simple_burn_visualization" 
path = "examples/simple_burn_visualization.rs"

[[example]]
name = "super_simple_demo"
path = "examples/super_simple_demo.rs"

[[example]]
name = "five_tensor_dual_visualization"
path = "examples/five_tensor_dual_visualization.rs"

[[example]]
name = "video_stream_processing"
path = "examples/video_stream_processing.rs"

[[example]]
name = "synthetic_video_burn_direct"
path = "examples/synthetic_video_burn_direct.rs"
